test/trivial/vass/type-fun-as-type-error-message.good
type-fun-as-type-error-message.chpl:2: error: cannot use a type function as a type without invoking it
