test/trivial/vass/type-fun-as-type-error-message.bad
type-fun-as-type-error-message.chpl:2: error: invalid type specification
